--- a/about.html
+++ b/about.html
@@ -1,5 +1,15 @@
 <!doctype html>
 <html lang="en">
+
+<style>
+
+  .bio{
+    color: rgb(179, 84, 100);
+font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+font-size: 35px;
+  }
+ 
+</style>
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -52,9 +62,9 @@
 		<div class="col-md-6">
       <img src="pictures/MicrosoftTeams-image (3).png" class="peppermint" alt=""> 
 		</div>
-		<div class="col-md-6 rara">
-      <p> This is Addie, founder of Peppermint Addie And Co, located Jackson, TN. Addie, with the support of her family, runs jacksons local icecream parlor. 
-Our goal for the future is to bring the community of jackson together. We want to bring all ages alike using the power of icecream. Ice cream is an aswesome treat that new and old members will enjoy!
+		<div class="col-md-6 rara" style="border: 12px; border-color: black;">
+      <p class="bio"> This is Addie, founder of Peppermint Addie And Co, located Jackson, TN. Addie, with the support of her family, runs jacksons local icecream parlor. 
+Our goal for the future is to bring the community of jackson together. We want to bring all ages alike using the power of ice cream. Ice cream is an aswesome treat that new and old members will enjoy!
 
 
       </p> 
@@ -64,7 +74,7 @@ Our goal for the future is to bring the community of jackson together. We want t
 <div class="container">
 	<div class="row">
 		<div class="col-md-6 rara">
-    <p>This is </p>
+    <p class="bio">This is our ice cream home! We wanted to have an old fashioned hand dipped ice cream and sweet treats place where everyone could enjoy. When you walk in, it feels as if you have walked into an old but cozy safe place. We have a wonderful communtiy here and we hope that you can join us!</p>
 		</div>
 		<div class="col-md-6">
       <img src="pictures/MicrosoftTeams-image (6).png" class="peppermint" alt=""> 
