--- a/meals.html
+++ b/meals.html
@@ -127,7 +127,10 @@
               <ul class="lunch yes">
                 <h5>We offer 12 flavors of ice cream including 2 non-diary options. Flavors may vary.</h5>
                 <li>1 Scoop... 3.79</li>
-                <li>2 Scoops...4.49</li>
+                <li>2 Scoops... 4.49</li>
+                <h4>Cotton Candy Bag... 2.00</h4>
+                <h4>Classic Banana Split... 6.69</h4>
+                <h4> Slice Cake (Flavors Vary)... 4.39</h4>
               </ul>
             </h4>
           </div>
