--- a/icecream.html
+++ b/icecream.html
@@ -48,23 +48,40 @@
   </nav>
   
     <h1>IceCream</h1>
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="pictures/R.png" alt="lemon">
+          <img src="..." class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>First slide label</h5>
+            <p>Some representative placeholder content for the first slide.</p>
+          </div>
         </div>
         <div class="carousel-item">
-          <img src="pictures/ice-cream.png" alt="cones" >
+          <img src="..." class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Second slide label</h5>
+            <p>Some representative placeholder content for the second slide.</p>
+          </div>
         </div>
         <div class="carousel-item">
-          <img src="pictures/3-new.jpg" alt="small ice cream" >
+          <img src="..." class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Third slide label</h5>
+            <p>Some representative placeholder content for the third slide.</p>
+          </div>
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
       </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
@@ -79,19 +96,19 @@
         </div>
       </div>
       <div class="row my-3 g-3">
-        <div class="col-md-4"><img src="pictures/chocolate icecream.jpeg" alt="Gallery Image" class="img-fluid">
+        <div class="col-md-4"><img src="pictures/2-mint.png" alt="Gallery Image">
           <div class="card-body">
             <h5 class="card-title">Chocolate</h5>
             <p class="card-text">things about chocolate.</p>
           </div>
         </div>
-        <div class="col-md-4"><img src="pictures/chocolate icecream.jpeg" alt="Gallery Image" class="img-fluid">
+        <div class="col-md-4"><img src="pictures/2 vanilla.jpg" alt="Gallery Image" >
           <div class="card-body">
             <h5 class="card-title">Chocolate</h5>
             <p class="card-text">things about chocolate.</p>
           </div>
         </div>
-        <div class="col-md-4"><img src="pictures/chocolate icecream.jpeg" alt="Gallery Image" class="img-fluid">
+        <div class="col-md-4"><img src="pictures/OIP-_1_.png" alt="Gallery Image" class="img-fluid">
           <div class="card-body">
             <h5 class="card-title">Chocolate</h5>
             <p class="card-text">things about chocolate.</p>
@@ -115,13 +132,13 @@
         </div>
       </div>
       <div class="row my-3 g-3">
-        <div class="col-md-4"><img src="pictures/chocolate icecream.jpeg" alt="Gallery Image" class="img-fluid">
+        <div class="col-md-4"><img src="pictures/OIP-_3_.png" alt="Gallery Image" class="img-fluid">
           <div class="card-body">
             <h5 class="card-title">Chocolate</h5>
             <p class="card-text">things about chocolate.</p>
           </div>
         </div>
-        <div class="col-md-4"><img src="pictures/chocolate icecream.jpeg" alt="Gallery Image" class="img-fluid">
+        <div class="col-md-4"><img src="pictures/" alt="Gallery Image" class="img-fluid">
           <div class="card-body">
             <h5 class="card-title">Chocolate</h5>
             <p class="card-text">things about chocolate.</p>
