--- a/icecream.html
+++ b/icecream.html
@@ -48,40 +48,20 @@
   </nav>
   
     <h1>IceCream</h1>
-    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-      </div>
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="..." class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>First slide label</h5>
-            <p>Some representative placeholder content for the first slide.</p>
-          </div>
+          <img src="pictures/outside.png" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="..." class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Second slide label</h5>
-            <p>Some representative placeholder content for the second slide.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="..." class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Third slide label</h5>
-            <p>Some representative placeholder content for the third slide.</p>
-          </div>
+          <img src="pictures/parents.png" class="d-block w-100" alt="...">
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
       </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
@@ -91,27 +71,27 @@
    
     <div class="container">
       <div class="row">
-        <div class="col-md-10">
+        <div class="col-md-10 icecream">
           <h1>Our Ice Cream</h1>
         </div>
       </div>
       <div class="row my-3 g-3">
         <div class="col-md-4"><img src="pictures/2-mint.png" alt="Gallery Image">
           <div class="card-body">
-            <h5 class="card-title">Chocolate</h5>
-            <p class="card-text">things about chocolate.</p>
+            <h5 class="card-title">Mint Chip</h5>
+            <p class="card-text"></p>
           </div>
         </div>
         <div class="col-md-4"><img src="pictures/2 vanilla.jpg" alt="Gallery Image" >
           <div class="card-body">
-            <h5 class="card-title">Chocolate</h5>
-            <p class="card-text">things about chocolate.</p>
+            <h5 class="card-title">Vanilla</h5>
+            <p class="card-text"></p>
           </div>
         </div>
         <div class="col-md-4"><img src="pictures/OIP-_1_.png" alt="Gallery Image" class="img-fluid">
           <div class="card-body">
             <h5 class="card-title">Chocolate</h5>
-            <p class="card-text">things about chocolate.</p>
+            <p class="card-text"></p>
           </div>
         </div>
       </div>
@@ -134,20 +114,20 @@
       <div class="row my-3 g-3">
         <div class="col-md-4"><img src="pictures/OIP-_3_.png" alt="Gallery Image" class="img-fluid">
           <div class="card-body">
-            <h5 class="card-title">Chocolate</h5>
-            <p class="card-text">things about chocolate.</p>
+            <h5 class="card-title">Strawberry Sherbert</h5>
+            <p class="card-text"></p>
           </div>
         </div>
-        <div class="col-md-4"><img src="pictures/" alt="Gallery Image" class="img-fluid">
+        <div class="col-md-4"><img src="pictures/2 cotton candy.png" alt="Gallery Image" class="img-fluid">
           <div class="card-body">
-            <h5 class="card-title">Chocolate</h5>
-            <p class="card-text">things about chocolate.</p>
+            <h5 class="card-title">Cotton Candy</h5>
+            <p class="card-text"></p>
           </div>
         </div>
-        <div class="col-md-4"><img src="pictures/chocolate icecream.jpeg" alt="Gallery Image" class="img-fluid">
+        <div class="col-md-4"><img src="pictures/unicorn icecream.jpg" alt="Gallery Image" class="img-fluid">
           <div class="card-body">
-            <h5 class="card-title">Chocolate</h5>
-            <p class="card-text">things about chocolate.</p>
+            <h5 class="card-title">Unicorn</h5>
+            <p class="card-text"></p>
           </div>
         </div>
       </div>
@@ -170,22 +150,22 @@
       <div class="row">
       </div>
       <div class="row my-3 g-3">
-        <div class="col-md-4"><img src="pictures/chocolate icecream.jpeg" alt="Gallery Image" class="img-fluid">
+        <div class="col-md-4"><img src="pictures/peanut butter icecream.png" alt="Gallery Image" class="img-fluid">
           <div class="card-body">
-            <h5 class="card-title">Chocolate</h5>
-            <p class="card-text">things about chocolate.</p>
+            <h5 class="card-title">Peanut Butter</h5>
+            <p class="card-text"></p>
           </div>
         </div>
-        <div class="col-md-4"><img src="pictures/chocolate icecream.jpeg" alt="Gallery Image" class="img-fluid">
+        <div class="col-md-4"><img src="pictures/Butter Pecan.png" alt="Gallery Image" class="img-fluid">
           <div class="card-body">
-            <h5 class="card-title">Chocolate</h5>
-            <p class="card-text">things about chocolate.</p>
+            <h5 class="card-title">Butter Pecan</h5>
+            <p class="card-text"></p>
           </div>
         </div>
-        <div class="col-md-4"><img src="pictures/chocolate icecream.jpeg" alt="Gallery Image" class="img-fluid">
+        <div class="col-md-4"><img src="pictures/cookies & cream.png" alt="Gallery Image" class="img-fluid">
           <div class="card-body">
-            <h5 class="card-title">Chocolate</h5>
-            <p class="card-text">things about chocolate.</p>
+            <h5 class="card-title">Cookies & Cream</h5>
+            <p class="card-text"></p>
           </div>
         </div>
       </div>
@@ -205,22 +185,22 @@
         </div>
       </div>
       <div class="row my-3 g-3">
-        <div class="col-md-4"><img src="pictures/chocolate icecream.jpeg" alt="Gallery Image" class="img-fluid">
+        <div class="col-md-4"><img src="pictures/Mango Lime.jpg" alt="Gallery Image" class="img-fluid">
           <div class="card-body">
-            <h5 class="card-title">Chocolate</h5>
-            <p class="card-text">things about chocolate.</p>
+            <h5 class="card-title">Mango Lime</h5>
+            <p class="card-text"></p>
           </div>
         </div>
-        <div class="col-md-4"><img src="pictures/chocolate icecream.jpeg" alt="Gallery Image" class="img-fluid">
+        <div class="col-md-4"><img src="pictures/Caramel.png" alt="Gallery Image" class="img-fluid">
           <div class="card-body">
-            <h5 class="card-title">Chocolate</h5>
-            <p class="card-text">things about chocolate.</p>
+            <h5 class="card-title">Caramel</h5>
+            <p class="card-text"></p>
           </div>
         </div>
-        <div class="col-md-4"><img src="pictures/chocolate icecream.jpeg" alt="Gallery Image" class="img-fluid">
+        <div class="col-md-4"><img src="pictures/Blue Moon.png" alt="Gallery Image" class="img-fluid">
           <div class="card-body">
-            <h5 class="card-title">Chocolate</h5>
-            <p class="card-text">things about chocolate.</p>
+            <h5 class="card-title">Blue Moon</h5>
+            <p class="card-text"></p>
           </div>
         </div>
       </div>
